--- a/templates/base.kv
+++ b/templates/base.kv
@@ -1,48 +1,186 @@
-<ItemForList>
-    text: root.text
+#:import get_color_from_hex kivy.utils.get_color_from_hex
 
-    IconLeftSampleWidget:
-        icon: root.icon
+<DrawerItem>
+    active_indicator_color: "#e7e4c0"
 
 
-<Example@MDFloatLayout>
+<DrawerLabel>
+    adaptive_height: True
+    padding: "18dp", 0, 0, "12dp"
 
-    MDBoxLayout:
-        orientation: 'vertical'
+    
+MDScreen:
+    md_bg_color: self.theme_cls.backgroundColor
 
-        MDTopAppBar:
-            title: app.title
-            md_bg_color: app.theme_cls.primary_color
-            background_palette: 'Primary'
-            elevation: 4
-            left_action_items: [['menu', lambda x: x]]
+    MDNavigationLayout:
 
-        MDScrollViewRefreshLayout:
-            id: refresh_layout
-            refresh_callback: app.refresh_callback
-            root_layout: root
-            spinner_color: "brown"
-            circle_color: "white"
+        MDScreenManager:
 
-            MDGridLayout:
-                id: box
-                adaptive_height: True
-                cols: 1
+            MDScreen:
 
-                
+                MDButton:
+                    pos_hint: {"center_x": .5, "center_y": .5}
+                    on_release: nav_drawer.set_state("toggle")
+
+                    MDButtonText:
+                        text: "Open Drawer"
+
+        MDNavigationDrawer:
+            id: nav_drawer
+            radius: 0, dp(16), dp(16), 0
+
+            MDNavigationDrawerMenu:
+
+                MDNavigationDrawerHeader:
+                    orientation: "vertical"
+                    padding: 0, 0, 0, "12dp"
+                    adaptive_height: True
+
+                    MDLabel:
+                        text: "Header title"
+                        theme_text_color: "Custom"
+                        theme_line_height: "Custom"
+                        line_height: 0
+                        text_color: "#4a4939"
+                        adaptive_height: True
+                        padding_x: "16dp"
+                        font_style: "Display"
+                        role: "small"
+
+                    MDLabel:
+                        text: "Header text"
+                        padding_x: "18dp"
+                        adaptive_height: True
+                        font_style: "Title"
+                        role: "large"
+
+                MDNavigationDrawerDivider:
+
+                DrawerItem:
+                    icon: "gmail"
+                    text: "Inbox"
+                    trailing_text: "+99"
+                    trailing_text_color: "#4a4939"
+
+                DrawerItem:
+                    icon: "send"
+                    text: "Outbox"
+
+                MDNavigationDrawerDivider:
+
+                MDNavigationDrawerLabel:
+                    text: "Labels"
+                    padding_y: "12dp"
+
+                DrawerLabel:
+                    icon: "information-outline"
+                    text: "Label"
+
+                DrawerLabel:
+                    icon: "information-outline"
+                    text: "Label"
+
+
 <MobileView>
-    MDLabel:
-        text: "Mobile"
 
 
 <TabletView>
-    MDLabel:
-        text: "Table"
+
+    MDBoxLayout:
+
+        orientation: "horizontal"
+        size_hint_x: 1
+
+        MDBoxLayout:
+            size_hint_x: 0.9 
+            orientation: "vertical"
+        
+        MDBoxLayout:
+            size_hint_x: 0.1 
+            orientation: "vertical"
+
+            MDNavigationRail:
+                type: "selected"
+                padding: "2dp"
+
+                MDNavigationRailMenuButton:
+                    icon: "dots-vertical"
+                    on_release: nav_drawer.set_state("toggle")
+
+                MDNavigationRailItem:
+
+                    MDNavigationRailItemIcon:
+                        icon: 'shopping'
+                        theme_font_size: "Custom"
+                        font_size: "26dp"
+
+                    MDNavigationRailItemLabel:
+                        text: app.persian(txt="فروشگاه")
+                        theme_font_name: "Custom"
+                        font_name: "nasalization"
+                        theme_font_size: "Custom"
+                        font_size: "20dp"
+
+                MDNavigationRailItem:
+
+                    MDNavigationRailItemIcon:
+                        icon: 'fire'
+                        theme_font_size: "Custom"
+                        font_size: "26dp"
+            
+                    MDNavigationRailItemLabel:
+                        text: app.persian(txt="شگفت روزانه")
+                        theme_font_name: "Custom"
+                        font_name: "nasalization"
+                        theme_font_size: "Custom"
+                        font_size: "20dp"
+
+                MDNavigationRailItem:
+
+                    MDNavigationRailItemIcon:
+                        icon: 'heart-outline'
+                        theme_font_size: "Custom"
+                        font_size: "26dp"
+            
+                    MDNavigationRailItemLabel:
+                        text: app.persian(txt="علاقه مندی ها")
+                        theme_font_name: "Custom"
+                        font_name: "nasalization"
+                        theme_font_size: "Custom"
+                        font_size: "20dp"
+
+                MDNavigationRailItem:
+
+                    MDNavigationRailItemIcon:
+                        icon: 'gift-outline'
+                        theme_font_size: "Custom"
+                        font_size: "26dp"
+            
+                    MDNavigationRailItemLabel:
+                        text: app.persian(txt="جوایز")
+                        theme_font_name: "Custom"
+                        font_name: "nasalization"
+                        theme_font_size: "Custom"
+                        font_size: "20dp"
+
+                MDNavigationRailItem:
+                    MDNavigationRailItemIcon:
+                        icon: 'cog-outline'
+                        theme_font_size: "Custom"
+                        font_size: "26dp"
+            
+                    MDNavigationRailItemLabel:
+                        text: app.persian(txt=" تنظیمات")
+                        theme_font_name: "Custom"
+                        font_name: "nasalization"
+                        theme_font_size: "Custom"
+                        font_size: "20dp"
+
+                MDNavigationRailFabButton:
+                    icon: "account-outline"
 
 
 <DesktopView>
-    MDLabel:
-        text: "Desktop"
 
 
 ResponsiveView:
