Responsive Stable version with Navigation system and menus

--- a/templates/base.kv
+++ b/templates/base.kv
@@ -131,10 +131,14 @@
         size: "240dp", "100dp"
     
         MDRelativeLayout:
+
             MDNavigationDrawer:
+
                 id: nav_drawer
+                pos_hint: {"top":1, "bottom": 1}
 
                 MDNavigationDrawerMenu:
+
                     MDNavigationDrawerItem:
 
                         pos_hint: {"top":.8, "bottom": 0.2}
