Responsive Stable version with Navigation system and menus

--- a/templates/base.kv
+++ b/templates/base.kv
@@ -36,92 +36,99 @@
                 on_release:on_release:nav_drawer.set_state("toggle")
                 
             MDNavigationRail:
-                pos_hint: {"top": 1, "bottom": 1, "left":0 ,"right": 1}
-                type: "unselected"
-
+                pos_hint: {"top": 1, "bottom": .88, "left":0 ,"right": 1}
+                type: "labeled"
                 MDNavigationRailItem:
+                    pos_hint: {"top": 1, "bottom": .88, "left":0 ,"right": 1}
+                    padding : "10dp"
 
                     MDNavigationRailFabButton:
                         icon: "magnify"
 
                     MDNavigationRailItemIcon:
+                        padding : "7dp"
                         icon: 'account-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"
                         text: app.persian(txt="حساب کاربری")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'home-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"
                         text: app.persian(txt="خانه")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'shopping-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"  
                         text: app.persian(txt="فروشگاه")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'face-agent'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"   
                         text: app.persian(txt="پشتیبانی")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'truck-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
-                        text: app.persian(txt="پیگیری سفارش")
+                        text: app.persian(txt="رهگیری")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'information-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"
                         text: app.persian(txt="درباره ما")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
 
 <DesktopView>
@@ -160,94 +167,99 @@
                 on_release:nav_drawer.set_state("toggle")
                 
             MDNavigationRail:
-                pos_hint: {"top": 1, "bottom": 1, "left":0 ,"right": 1}
-                type: "unselected"
-
+                pos_hint: {"top": 1, "bottom": .88, "left":0 ,"right": 1}
+                type: "labeled"
                 MDNavigationRailItem:
+                    pos_hint: {"top": 1, "bottom": .88, "left":0 ,"right": 1}
+                    padding : "10dp"
 
                     MDNavigationRailFabButton:
                         icon: "magnify"
 
                     MDNavigationRailItemIcon:
+                        padding : "7dp"
                         icon: 'account-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"
                         text: app.persian(txt="حساب کاربری")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'home-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"
                         text: app.persian(txt="خانه")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'shopping-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"  
                         text: app.persian(txt="فروشگاه")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'face-agent'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"   
                         text: app.persian(txt="پشتیبانی")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'truck-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
-                        text: app.persian(txt="پیگیری سفارش")
+                        text: app.persian(txt="رهگیری")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
+                        font_size: "17dp"
 
 
                 MDNavigationRailItem:
-
+                    padding : "10dp"
                     MDNavigationRailItemIcon:
                         icon: 'information-outline'
-                        font_size: "37dp"  # Set icon size here
+                        font_size: "52dp"  # Set icon size here
 
                     MDNavigationRailItemLabel:
+                        padding : "2dp"
                         text: app.persian(txt="درباره ما")
                         theme_font_name: "Custom"
                         font_name: "nasalization"
                         theme_font_size: "Custom"
-                        font_size: "9dp"
-
-
+                        font_size: "17dp"
 
 
 <MobileView>
